--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,32 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
+      landrs:
+        aliases:
+          - ld.landrs.org
+  
+  trifid:
+   image: landrs/trifid
+   build: ../trifid
+   labels:
+     - traefik.http.routers.trifid.rule=Host(`ld.landrs.org`)
+     - traefik.http.services.trifid.loadbalancer.server.port=8080
+   networks:
+     - landrs
+
+  fuseki-geosparql:
+    image: landrs/fuseki-geosparql
+    build: ../fuseki
+    command: -l false -u -rf "/geosparql_test.rdf>xml"
+    volumes:
+      - geosparql_vol:/jena-fuseki
+    networks:
       - landrs
       
+
+volumes:
+  geosparql_vol:
+
 networks:
   landrs:
     driver: bridge
