--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,25 +3,40 @@ version: '3'
 services:
   proxy:
     image: traefik:v2.0
-    command: --api.insecure=true --providers.docker
+    command:
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
+      - --providers.docker
+      - --providers.file.directory=/etc/traefik/dyn/
+      - --certificatesresolvers.le.acme.email=jsweet@nd.edu
+      - --certificatesresolvers.le.acme.storage=/data/acme.json
+      - --certificatesresolvers.le.acme.tlschallenge=true
+    labels:
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
+      - "traefik.http.routers.redirs.entrypoints=web"
+      - "traefik.http.routers.redirs.middlewares=redirect-to-https"
     ports:
-      # The HTTP port
       - "80:80"
-      # The Web UI (enabled by --api.insecure=true)
-      - "8080:8080"
+      - "443:443"
     volumes:
+      - ./config:/etc/traefik
       - /var/run/docker.sock:/var/run/docker.sock
+      - traefik_vol:/data/
     networks:
       landrs:
         aliases:
           - ld.landrs.org
   
   trifid:
-   image: landrs/trifid
-   build: ../trifid
-   labels:
-     - traefik.http.routers.trifid.rule=Host(`ld.landrs.org`)
-     - traefik.http.services.trifid.loadbalancer.server.port=8080
+    image: landrs/trifid
+    build: ../trifid
+    labels:
+      - traefik.http.routers.trifid.rule=Host(`ld.landrs.org`)
+      - traefik.http.routers.frontend.tls=true
+      - traefik.http.routers.frontend.tls.certresolver=le
+      - traefik.http.routers.frontend.tls.options=mintls
+      - traefik.http.services.trifid.loadbalancer.server.port=8080
    networks:
      - landrs
 
@@ -34,9 +49,9 @@ services:
     networks:
       - landrs
       
-
 volumes:
   geosparql_vol:
+  traefik_vol:
 
 networks:
   landrs:
