--- a/config/dyn/tls.yaml
+++ b/config/dyn/tls.yaml
@@ -1,6 +1,6 @@
 tls:
   options:
-    mintls:
+    default:
       minVersion: VersionTLS12
       cipherSuites:
         - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
