--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - --entrypoints.websecure.address=:443
       - --providers.docker
       - --providers.file.directory=/etc/traefik/dyn/
-      - --certificatesresolvers.le.acme.email=jsweet@nd.edu
+      - --certificatesresolvers.le.acme.email=admin@example.com
       - --certificatesresolvers.le.acme.storage=/data/acme.json
       - --certificatesresolvers.le.acme.tlschallenge=true
     labels:
