--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,11 +12,11 @@ services:
       - --certificatesresolvers.le.acme.storage=/data/acme.json
       - --certificatesresolvers.le.acme.tlschallenge=true
     # Comment out labels block below for local dev
-    labels:
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
-      - "traefik.http.routers.redirs.entrypoints=web"
-      - "traefik.http.routers.redirs.middlewares=redirect-to-https"
+    # labels:
+    #   - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+    #   - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
+    #   - "traefik.http.routers.redirs.entrypoints=web"
+    #   - "traefik.http.routers.redirs.middlewares=redirect-to-https"
     ports:
       - "80:80"
       - "443:443"
@@ -41,24 +41,24 @@ services:
     networks:
       - landrs
 
-  docs:
-    image: landrs/docs
-    build: ../docs
-    labels:
-      - traefik.http.routers.docs.rule=(Host(`ld.landrs.org`) && PathPrefix(`/docs`))
-      - traefik.http.routers.docs.priority=2
-      - traefik.http.services.docs.loadbalancer.server.port=80
-      - traefik.http.middlewares.strip-prefix.chain.middlewares=strip-prefix-1,strip-prefix-2
-      - traefik.http.middlewares.strip-prefix-1.redirectregex.regex=^(https?://[^/]+/[a-z0-9_]+)$$
-      - traefik.http.middlewares.strip-prefix-1.redirectregex.replacement=$${1}/
-      - traefik.http.middlewares.strip-prefix-1.redirectregex.permanent=true
-      - traefik.http.middlewares.strip-prefix-2.stripprefixregex.regex=/[a-z0-9_]+
-      - traefik.http.routers.docs.middlewares=strip-prefix
-      # Comment out lines below for local dev
-      - traefik.http.routers.docs.tls=true
-      - traefik.http.routers.docs.tls.certresolver=le
-    networks:
-      - landrs
+  # docs:
+  #   image: landrs/docs
+  #   build: ../docs
+  #   labels:
+  #     - traefik.http.routers.docs.rule=(Host(`ld.landrs.org`) && PathPrefix(`/docs`))
+  #     - traefik.http.routers.docs.priority=2
+  #     - traefik.http.services.docs.loadbalancer.server.port=80
+  #     - traefik.http.middlewares.strip-prefix.chain.middlewares=strip-prefix-1,strip-prefix-2
+  #     - traefik.http.middlewares.strip-prefix-1.redirectregex.regex=^(https?://[^/]+/[a-z0-9_]+)$$
+  #     - traefik.http.middlewares.strip-prefix-1.redirectregex.replacement=$${1}/
+  #     - traefik.http.middlewares.strip-prefix-1.redirectregex.permanent=true
+  #     - traefik.http.middlewares.strip-prefix-2.stripprefixregex.regex=/[a-z0-9_]+
+  #     - traefik.http.routers.docs.middlewares=strip-prefix
+  #     # Comment out lines below for local dev
+  #     # - traefik.http.routers.docs.tls=true
+  #     # - traefik.http.routers.docs.tls.certresolver=le
+  #   networks:
+  #     - landrs
 
 
   fuseki-geosparql:
@@ -81,10 +81,10 @@ services:
       - traefik.http.middlewares.trifid-update-auth.basicauth.users=admin:$$2y$$10$$qT00E87LP6o15pUSFNnirusP.DxUhpxE8lPBrxOgQMq7c9flvd.Vm
       - traefik.http.routers.trifid-update.middlewares=trifid-update,trifid-update-auth
       # Comment out lines below for local dev
-      - traefik.http.routers.trifid-query.tls=true
-      - traefik.http.routers.trifid-query.tls.certresolver=le
-      - traefik.http.routers.trifid-update.tls=true
-      - traefik.http.routers.trifid-update.tls.certresolver=le
+      # - traefik.http.routers.trifid-query.tls=true
+      # - traefik.http.routers.trifid-query.tls.certresolver=le
+      # - traefik.http.routers.trifid-update.tls=true
+      # - traefik.http.routers.trifid-update.tls.certresolver=le
     networks:
       - landrs
 
