--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 
 services:
   proxy:
@@ -12,11 +12,11 @@ services:
       - --certificatesresolvers.le.acme.storage=/data/acme.json
       - --certificatesresolvers.le.acme.tlschallenge=true
     # Comment out labels block below for local dev
-    # labels:
-    #   - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-    #   - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
-    #   - "traefik.http.routers.redirs.entrypoints=web"
-    #   - "traefik.http.routers.redirs.middlewares=redirect-to-https"
+    labels:
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
+      - "traefik.http.routers.redirs.entrypoints=web"
+      - "traefik.http.routers.redirs.middlewares=redirect-to-https"
     ports:
       - "80:80"
       - "443:443"
@@ -28,7 +28,7 @@ services:
       landrs:
         aliases:
           - ld.landrs.org
-
+  
   trifid:
     image: landrs/trifid
     build: ../trifid
@@ -36,29 +36,29 @@ services:
       - traefik.http.routers.trifid.rule=Host(`ld.landrs.org`)
       - traefik.http.routers.trifid.priority=1
       # Comment out lines below for local dev
-      # - traefik.http.routers.trifid.tls=true
-      # - traefik.http.routers.trifid.tls.certresolver=le
+      - traefik.http.routers.trifid.tls=true
+      - traefik.http.routers.trifid.tls.certresolver=le
     networks:
       - landrs
 
-  # docs:
-  #   image: landrs/docs
-  #   build: ../docs
-  #   labels:
-  #     - traefik.http.routers.docs.rule=(Host(`ld.landrs.org`) && PathPrefix(`/docs`))
-  #     - traefik.http.routers.docs.priority=2
-  #     - traefik.http.services.docs.loadbalancer.server.port=80
-  #     - traefik.http.middlewares.strip-prefix.chain.middlewares=strip-prefix-1,strip-prefix-2
-  #     - traefik.http.middlewares.strip-prefix-1.redirectregex.regex=^(https?://[^/]+/[a-z0-9_]+)$$
-  #     - traefik.http.middlewares.strip-prefix-1.redirectregex.replacement=$${1}/
-  #     - traefik.http.middlewares.strip-prefix-1.redirectregex.permanent=true
-  #     - traefik.http.middlewares.strip-prefix-2.stripprefixregex.regex=/[a-z0-9_]+
-  #     - traefik.http.routers.docs.middlewares=strip-prefix
-  #     # Comment out lines below for local dev
-  #     # - traefik.http.routers.docs.tls=true
-  #     # - traefik.http.routers.docs.tls.certresolver=le
-  #   networks:
-  #     - landrs
+  docs:
+    image: landrs/docs
+    build: ../docs
+    labels:
+      - traefik.http.routers.docs.rule=(Host(`ld.landrs.org`) && PathPrefix(`/docs`))
+      - traefik.http.routers.docs.priority=2
+      - traefik.http.services.docs.loadbalancer.server.port=80
+      - traefik.http.middlewares.strip-prefix.chain.middlewares=strip-prefix-1,strip-prefix-2
+      - traefik.http.middlewares.strip-prefix-1.redirectregex.regex=^(https?://[^/]+/[a-z0-9_]+)$$
+      - traefik.http.middlewares.strip-prefix-1.redirectregex.replacement=$${1}/
+      - traefik.http.middlewares.strip-prefix-1.redirectregex.permanent=true
+      - traefik.http.middlewares.strip-prefix-2.stripprefixregex.regex=/[a-z0-9_]+
+      - traefik.http.routers.docs.middlewares=strip-prefix
+      # Comment out lines below for local dev
+      - traefik.http.routers.docs.tls=true
+      - traefik.http.routers.docs.tls.certresolver=le
+    networks:
+      - landrs
 
 
   fuseki-geosparql:
@@ -81,10 +81,10 @@ services:
       - traefik.http.middlewares.trifid-update-auth.basicauth.users=admin:$$2y$$10$$qT00E87LP6o15pUSFNnirusP.DxUhpxE8lPBrxOgQMq7c9flvd.Vm
       - traefik.http.routers.trifid-update.middlewares=trifid-update,trifid-update-auth
       # Comment out lines below for local dev
-      # - traefik.http.routers.trifid-query.tls=true
-      # - traefik.http.routers.trifid-query.tls.certresolver=le
-      # - traefik.http.routers.trifid-update.tls=true
-      # - traefik.http.routers.trifid-update.tls.certresolver=le
+      - traefik.http.routers.trifid-query.tls=true
+      - traefik.http.routers.trifid-query.tls.certresolver=le
+      - traefik.http.routers.trifid-update.tls=true
+      - traefik.http.routers.trifid-update.tls.certresolver=le
     networks:
       - landrs
 
@@ -92,22 +92,12 @@ services:
     image: landrs/demo
     build:
       context: ../demo
-      target: build-stage
       args:
         - VUE_APP_AXIOS_BASE_URL=http://ld.landrs.org/${QUERIES_PATH:-ejs}
-    environment:
-      - VUE_APP_AXIOS_BASE_URL=http://ld.landrs.org/${QUERIES_PATH:-ejs}
-    command: npm run serve
-    volumes:
-      - '../demo:/app'
-      - '/app/node_modules'
-    expose:
-      - 8080
     labels:
-      - traefik.http.services.demo.loadbalancer.server.port=8080
       - traefik.http.routers.demo.rule=(Host(`ld.landrs.org`) && PathPrefix(`/demo`))
-    #      - traefik.http.middlewares.demo-prefix.stripprefix.prefixes=/demo
-    #      - traefik.http.routers.demo.middlewares=demo-prefix
+      - traefik.http.middlewares.demo-prefix.stripprefix.prefixes=/demo
+      - traefik.http.routers.demo.middlewares=demo-prefix
     networks:
       - landrs
 
